--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,3 +1,6 @@
+.line {
+	border-top : 1px solid rgb(211, 211, 211);
+}
 .leftSide {
 	float : left;
 	width : 80%;
@@ -25,10 +28,14 @@
 	border: 1px solid black;
 	padding : 20px;
 	height : 300px;
+	margin : 0px;	
 }
 .loginBox a {
 	color : black;
 	text-decoration: none;
+}
+.loginBox .title {
+	margin-bottom : 10px;
 }
 .loginBox #mid {
 	width : 100%;
@@ -37,20 +44,51 @@
 	border-radius: 5px;
 	border : 1px solid rgb(175, 175, 175);
 	padding-left : 7px;
+	margin-top : 17px;
 }
 .loginBox #pwd {
 	width : 100%;
 	height : 30px;	
 	margin-top: 5px;		
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 	font-family: 'Nanum Gothic';
 	border-radius: 5px;
 	border : 1px solid rgb(175, 175, 175);
 	padding-left : 7px;
 }
 .loginBox .idSaveBox {
-	margin-bottom: 10px;
-	font-size : 15px;		
+	margin-bottom: 42px;
+	display : flex;
+}
+.loginBox .idSaveBox .text {
+	font-size : 13px;
+	color : darkgray;
+	line-height: 17px;
+}
+.loginBox .idSaveBox .loginToggleBox {
+	width : 35px;
+	background-color : lightgray;
+	border-radius: 20px;
+	position : relative;
+	height : 19px;
+	cursor : pointer;
+	user-select : none;
+}
+.loginBox .idSaveBox .loginToggleBox .toggleBtn {
+	width : 13px;
+	height : 13px;
+	border-radius: 10px;
+	background-color: white;
+	position: absolute;
+	left : 2px;
+	top : 3px;
+	transition : 0.3s;
+}
+.loginBox .idSaveBox .loginToggleBox.checked {
+	background-color : #68aef3;
+}
+.loginBox .idSaveBox .loginToggleBox.checked .toggleBtn{
+	left : 20px;
 }
 .loginBox #login {
 	width : 100%;
@@ -62,7 +100,7 @@
 	text-align: center;
 	font-size: 17px;
 	line-height: 35px;
-	margin-bottom: 10px;
+	margin-bottom: 17px;
 	cursor : pointer;
 }
 .loginBox #login:hover {
@@ -80,19 +118,106 @@
 	font-size: 13px;
 	color : gray;
 }
-.loginBox .line {
-	border-top : 1px solid rgb(211, 211, 211);
-	margin-bottom: 10px;
-	margin-top: 10px;
+.memberBox {
+	height : 300px;
+	padding : 20px;
 }
-.loginBox .kakaoLogin {
-	border : 1px solid rgb(231, 231, 231);
-	border-radius : 5px;
-	text-align: center;
-	height : 35px;
-	line-height: 35px;
-	font-size: 15px;
-	background-color: yellow;
+.memberBox > .row1 {
+	margin-bottom : 5px;
+	font-size : 15px;
+}
+.memberBox > .row2 {
+	display : flex;
+	width : 100%;
+	height : 50px;
+	margin-top : 15px;
+	margin-bottom : 15px;
+}
+.memberBox .row2 .profile {
+	height : 100%;
+	width : 50px;
+}
+.memberBox .row2 .profile img {
+	border-radius: 50px;
+	width : 50px;
+	height : 50px;
+	background-color: #7db4f5;
+}
+.memberBox .row2 .info {
+	height : 100%;
+	flex : 1;
+	margin-left: 7px;
+	padding-top : 5px;
+}
+.memberBox .row2 .info .row1 {
+	display : flex;
+	justify-content: space-between;
+	font-weight : bolder;
+	font-size : 15px;
+    margin-bottom: 7px;
+}
+.memberBox .row2 .info .row1 .col2 {
+	cursor : pointer;
+}
+.memberBox .row2 .info .row2 {
+	font-size : 14px;
+	color : #636363;
+}
+.memberBox .row2 .info .row2 .text1 {
+	color : #6f6f6f;
+}
+.memberBox .row2 .info .row2 .text2 {
+	font-size : 11px;
+	color : #939393;
+}
+.memberBox .row3 .progressContainer {
+	border : 1px solid lightgray;
+	height : 15px;
+	margin-bottom : 12px;
+	border-radius: 1px;
+}
+.memberBox .row3 .progressContainer .progressBar {
+  	background: linear-gradient(to bottom, #3381ff, #4e92ff, #88afef, #4e92ff, #3381ff);
+	height : 15px;
+}
+.memberBox > .row4 {
+	margin-top : 25px;
+	margin-bottom : 10px;
+	font-size : 12px;
+	color : gray;
+}
+.memberBox .row4 span {
+	cursor : pointer;
+}
+.memberBox > .row5 {
+	display : flex;
+	justify-content: space-between;
+	margin-top : 12px;
+	margin-bottom : 20px;
+}
+.memberBox .row5 .col1 .text2 {
+	color : red;
+	font-weight : bolder;
+}
+.memberBox .row5 .col2 .text1 {
+	font-size: 12px;
+	color : gray;
+	cursor : pointer;
+}
+.memberBox > .row6 {
+	width : 100%;
+}
+.memberBox .row6 .logout {
+	width : 100%;
+	height : 40px;
+	margin-top : 10px;
+	margin-bottom : 10px;
+	border-radius: 6px;
+	background-color : rgb(78, 78, 78);
+	color : white;
+	text-align : center;
+	line-height: 40px;
+	cursor : pointer;
 }
 .adBox {
 	border: 1px solid black;
