--- a/src/main/webapp/resources/css/member/memberDelete.css
+++ b/src/main/webapp/resources/css/member/memberDelete.css
@@ -92,3 +92,70 @@ body {
 	color: #777676;
 	cursor : pointer;
 }
+#memberDeleteForm .content {
+	background-color: white;
+	width : 650px;
+	height : 400px;
+	margin : 20px auto;
+	border-radius: 5px;
+	padding : 17px;
+	animation-duration : 1s;
+	position : relative;
+}
+#memberDeleteForm .title {
+	font-size: 1.2em;
+	font-weight: bolder;
+}
+#memberDeleteForm .title div {
+	display : inline-block;
+	width : 575px;
+	text-align: right;
+}
+#memberDeleteForm .title div .close {
+	cursor: pointer;
+}
+#memberDeleteForm .info {
+	border: 2px solid #c4c4c4;
+	border-radius: 6px;
+	padding : 10px;
+	font-weight: bold;
+	font-size: 0.9em;
+	margin : 7px 0px 7px 0px;
+}
+#memberDeleteForm .selectBox {
+	border: 2px solid #c4c4c4;
+	border-radius: 5px;
+	height : 30px;
+	width : 100%;
+	margin : 7px 0px 15px 0px;
+}
+#memberDeleteForm .check {
+	font-size : 0.8em;
+	font-weight: bold;
+	margin-bottom: 30px;
+}
+#memberDeleteForm .delete {
+	text-align: center;
+}
+#memberDeleteForm .delete input {
+	width : 160px;
+	padding : 8px;
+	font-size: 1.1em;
+	color : white;
+	background-color: red;
+	border: 0px;
+	border-radius: 5px;
+	transition : 0.3s;
+}
+#memberDeleteForm .delete input:hover {
+	background-color: rgb(189, 25, 25);
+	cursor: pointer;
+}
+#memberDeleteForm #detailWhy {
+	display : none;
+}
+#memberDeleteForm #detailWhy {
+	width : 100%;
+	box-sizing: border-box;
+	border-radius: 3px;
+}
