--- a/src/main/webapp/resources/css/member/memberPwdChange.css
+++ b/src/main/webapp/resources/css/member/memberPwdChange.css
@@ -92,3 +92,58 @@ body {
 	color: #777676;
 	cursor : pointer;
 }
+.pwdChangeContainer {
+	width : 93%;
+	margin : 0 auto; 
+}
+.pwdChangeForm {
+	width : 78%;
+	margin : 0 auto;
+	margin-top : 50px;
+}
+.pwdChangeForm .row {
+	display : flex;
+	margin-bottom : 25px;
+}
+.pwdChangeForm .row .col1 {
+	flex : 0.7;
+	color : #515151;
+	line-height : 32px;
+}
+.pwdChangeForm .row .col2 {
+	flex : 2;
+}
+.pwdChangeForm .row .col2 input {
+	width : 100%;
+	box-sizing : border-box;
+	height : 28px;
+	border : 1px solid #b5b5b5;
+	border-radius : 5px;
+	outline: none;
+	padding-left : 5px;
+}
+.pwdChangeForm .row4 {
+	display : flex;
+	justify-content: flex-end;
+}
+.pwdChangeForm .pwdChangeBtn {
+	border-radius: 5px;
+	background-color : #ffc600;
+	box-sizing: border-box;
+	padding : 9px 19px;
+	text-align: center;
+	font-size : 14px;
+}
+.pwdChangeForm .row2 .col2, .pwdChangeForm .row3 .col2 {
+	position : relative;
+}
+.pwdChangeForm .msg {
+	position : absolute;
+	left : 8px;
+	top : 31px;
+	font-size : 12px;
+	color : red;
+}
+.pwdChangeForm .pwdChangeBtn {
+	cursor : pointer;
+}
