--- a/src/main/webapp/resources/css/member/memberUpdate.css
+++ b/src/main/webapp/resources/css/member/memberUpdate.css
@@ -8,7 +8,55 @@ body {
 	border-top : 1px solid #d9d8d8;
 }
 .memberUpdateContainer {
-	margin-top : 20px;
+	padding : 20px;
+}
+.header {
+	display : flex;
+	justify-content: space-between;
+	width : 93%;
+	margin : 0 auto;
+	margin-bottom : 10px;
+}
+.header .section {
+	flex : 1;
+	display : flex;	
+}
+.header .section .text {
+	margin-left : 10px;
+	color: #727272;
+    font-size: 14px;
+}
+.header .section .text a {
+	text-decoration: none;
+	color : #727272;
+}
+.header .section .symbol {
+	font-weight : bolder;
+}
+.header .myInfo {
+	display : flex;
+}
+.header .myInfo .col {
+	margin-left : 14px;
+	cursor : pointer;
+}
+.header .myInfo .col1 img {
+	background-color: #7db4f5;
+	width : 25px;
+	border-radius: 13px;
+}
+.header .myInfo .col2 {
+	margin-left : 3px;
+}
+.header .myInfo .col2:hover .text1 {
+	text-decoration: underline;
+}
+.header .myInfo .col2 .text1 {
+	line-height : 23px;
+}
+.header .myInfo .col2 .text2 {
+	font-size : 10px;
+	color : gray;
 }
 .memberUpdateContainer .box{
 	box-shadow: 1px 1px 16px 0 rgba(0,0,0,.16);
@@ -22,8 +70,7 @@ body {
 }
 .memberUpdateContainer .title {
 	width : 93%;
-	margin : 0px auto;
-	margin-bottom : 12px;
+	margin : 12px auto;
 	font-size : 22px;
 	font-weight : bolder;
 	color: #424242;
@@ -67,10 +114,17 @@ body {
 }
 .update .inValidMsg {
 	color : red;
-	font-size : 14px;
+	font-size : 12px;
 }
 .mailBox {
 	position : relative;
+}
+.mailBox #msg{
+	position : absolute;
+	left : 0px;
+	top : 29px;
+	font-size : 12px;
+	color : red;
 }
 .mailBox input {
 	width : 200px;
