--- a/src/main/webapp/resources/css/member/myPageIframe.css
+++ b/src/main/webapp/resources/css/member/myPageIframe.css
@@ -52,9 +52,12 @@ body {
 	height : 100px;
 	border-radius: 50px;
 	cursor : pointer;
+	border : 1px solid #e3e3e3;
 }
 .leftSide .profile .imgBox img:hover {
 	box-shadow: 1px 1px 16px 0 rgba(0,0,0,.16);
+	transform: scale(1.1); /* 확대 비율 조정 가능 */
+  	transition: transform 0.3s ease; /* 부드러운 전환을 위한 속성 */
 }
 .leftSide .profile .imgBox .profileChange {
 	position : absolute;
