--- a/src/main/webapp/resources/css/home/header.css
+++ b/src/main/webapp/resources/css/home/header.css
@@ -8,14 +8,38 @@ body {
 	text-align: center;
 	font-size : 3em;
 	font-weight: bolder;
-	margin-top: 20px;
-	height : 100px;
+	margin-bottom : 14px;
 }
-.headerContainer span {
-	vertical-align: top;
-	margin-left : -22px;			
+.headerContainer .logo {
+	margin-bottom : 15px;
+	margin-top : 25px;
 }
-.headerContainer a {
-	text-decoration: none;
-	color : black;				
+.headerContainer .logo img {
+	width : 200px;
+}
+.headerContainer .searchBar {
+	display : flex;
+	width : 31%;
+	border : 1px solid #677ef1;
+	border-radius: 34px;
+	margin : auto;
+	height : 50px;
+}
+.headerContainer .searchBar img	{
+    width: 38px;
+    margin-left: 7px;
+}
+.headerContainer .searchBar .search {
+	margin-left : 6px;
+    margin-right: 21px;
+	line-height : 34px;
+	flex : 1;
+}
+.headerContainer .searchBar .search input {
+	font-size : 20px;
+	font-weight : bolder;
+	width : 100%;
+	box-sizing: border-box;
+	border : none;
+	outline : none;
 }
