--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -2,7 +2,7 @@
 	border-top : 1px solid rgb(211, 211, 211);
 }
 .homeContainer {
-	padding : 15px;
+	padding : 15px 250px;
 	display : flex;
 }
 .leftSide {
@@ -10,7 +10,7 @@
 	margin-right : 28px;
 }
 .rightSide {
-	flex : 1;
+	flex : 1.1;
 }
 .wordCloudBox {
 	border: 1px solid black;
@@ -199,9 +199,15 @@
 	margin-bottom : 10px;
 	font-size : 12px;
 	color : gray;
+	display : flex;
+	justify-content: space-between;
 }
 .memberBox .row4 span {
 	cursor : pointer;
+}
+.memberBox .row4 #adminPage {
+    color: #009688;
+    font-weight: bolder;
 }
 .memberBox > .row5 {
 	display : flex;
@@ -236,9 +242,13 @@
 }
 .adBox {
 	margin-bottom : 15px;
+    margin-top: 20px;
 	width : 100%;
 	height : 350px;
 	overflow: hidden;
+    border: 1px solid #e1dede;
+    border-radius: 10px;
+    background-color: #f5f2f2;
 }
 .adBox .title {
 	margin-bottom : 10px;
