--- a/src/main/webapp/resources/css/service/serviceList.css
+++ b/src/main/webapp/resources/css/service/serviceList.css
@@ -17,6 +17,7 @@ body {
 .title .text .text1 {
     font-size: 40px;
     font-weight: bolder;
+    cursor : pointer;
 }
 .title .line {
 	width : 100%;
@@ -28,9 +29,10 @@ body {
 	width : 100%;
 	display : flex;
 	justify-content: flex-end;
-	background-color : #e3f1ff;;
+	background-color : #e3f1ff;
 	padding : 32px 20px;
 	margin-top : 50px;
+	margin-bottom : 120px;
 	box-sizing: border-box;
 	border : 1px solid #ebebeb;
 }
@@ -82,18 +84,63 @@ body {
 	border-radius: 32px;
 	cursor : pointer;
 }
+.serviceList {
+	margin-top : 10px;
+}
 .serviceList .tableHeader {
 	display : flex;
-	background-color : #e3f1ff;;
-	padding : 7px 0px;
+	background-color : #e3f1ff;
+	padding : 10px 0px;
 	box-sizing: border-box;
 	width : 100%;
-	margin-top : 100px;
-	border-top : 1px solid #ebebeb;;
-	border-bottom : 1px solid #ebebeb;;
+	border-top : 1px solid #ebebeb;
+	border-bottom : 1px solid #ebebeb;
+	font-weight : bolder;
+}
+.serviceList .listContent {
+	display : flex;
+	box-sizing: border-box;
+	width : 100%;
+	border-bottom : 1px solid #ebebeb;
+	font-size : 14px;
 }
 .serviceList .col {
 	text-align: center;
+	padding : 10px 0px;
+}
+.listContent a {
+	color : black;
+	text-decoration: none;
+}
+.listContent a:hover {
+	text-decoration: underline;
+}
+.listContent .col2 {
+	text-align : left;
+}
+.listContent .col2 > div {
+	display : inline-block;
+	vertical-align: middle;
+}
+.listContent .col2 img {
+	width : 13px;
+}
+.listContent .col6 {
+	padding : 0px;
+}
+.listContent .col6 .waiting {
+	background-color: #656565;
+    color: white;
+    padding: 4px;
+    display: inline-block;
+    margin-top: 7px;
+}
+.listContent .col6 .answer {
+	background-color: #ff5d00;
+    color: white;
+    padding: 4px;
+    display: inline-block;
+    margin-top: 7px;
 }
 .serviceList .col1 {
 	width : 80px;
@@ -102,11 +149,54 @@ body {
 	flex : 1;
 }
 .serviceList .col3 {
-	width : 110px;
-}
-.serviceList .col4 {
 	width : 100px;
 }
+.serviceList .col4 {
+	width : 140px;
+}
 .serviceList .col5 {
+	width : 100px;
+}
+.serviceList .col6 {
 	width : 80px;
+}
+.pagingContainer {
+	display : flex;
+}
+.pagingContainer .col1 {
+	flex : 1;
+}
+.pagingContainer .pageSizeBox {
+	flex : 1;
+	text-align : right;
+}
+.pagingContainer .pageSizeBox select {
+    height: 23px;
+    border-radius: 1px;
+}
+.pagingContainer .pagingBox {
+	display : flex;
+	justify-content : center;
+	margin : auto;
+}
+.pagingContainer .pagingBox .item {
+	cursor : pointer;
+	border : 1px solid #8d8989;
+	border-radius : 3px;
+    width: 17px;
+    height: 17px;
+    text-align: center;
+    margin-right : 4px;
+    padding : 2px;
+    font-size : 13px;
+    color: #2d2d2d;
+}
+.pagingContainer .pagingBox .item img {
+	width : 50%;
+	height : 50%;
+}
+.pagingContainer .pagingBox .number.selected {
+	background-color: gray;
+	color : white;
+	font-weight : bolder;
 }
