--- a/src/main/webapp/resources/css/admin/adminMain.css
+++ b/src/main/webapp/resources/css/admin/adminMain.css
@@ -78,6 +78,7 @@ body {
 }
 .mainNav .profileBox .profile .col1 {
 	margin : 12px 8px 0px 8px;
+	cursor : pointer;
 }
 .mainNav .profileBox .profile .col2 {
 	margin-top : 14px;
@@ -85,6 +86,7 @@ body {
 .mainNav .profileBox .profile .col2 .text1 {
 	color : white;
 	font-weight: bolder;
+	cursor : pointer;
 }
 .mainNav .profileBox .profile .col2 .text2 {
 	color : #c7c7c7;
