--- a/src/main/webapp/resources/css/board/boardContent.css
+++ b/src/main/webapp/resources/css/board/boardContent.css
@@ -67,6 +67,10 @@
 	font-size : 13px;
 	color : gray;
 }
+.contentContainer .profile .profileInfo .viewNum {
+	font-size : 13px;
+	color : gray;
+}
 .contentContainer .profile .option {
 	flex : 1;
 	text-align: right;
@@ -76,7 +80,7 @@
 	width : 17px;
 	cursor : pointer;
 }
-.contentContainer .profile .option .optionForm {
+.contentContainer .option .optionForm {
 	position : absolute;
 	right : 0px;
 	padding : 2px 0px;
@@ -85,13 +89,13 @@
     border-radius: 4px;
     display : none;
 }
-.contentContainer .profile .option .optionForm div {
+.contentContainer .option .optionForm div {
 	text-align : center;
 	font-size: 15px;
-    padding: 3px 19px;
+    padding: 5px 22px;
     cursor : pointer;
 }
-.contentContainer .profile .option .optionForm div:hover {
+.contentContainer .option .optionForm div:hover {
 	background-color : #f1f1f1;
 }
 .contentContainer > .content {
@@ -103,12 +107,19 @@
 .contentContainer .goodBadinfo {
 	display : flex;
 	font-size : 15px;
+	height : 17px;
 	margin-bottom: 10px;
 }
 .contentContainer .goodBadinfo img {
 	width : 17px;
 	vertical-align: bottom;
 	cursor : pointer;
+}
+.contentContainer .goodBadinfo img.recommend {
+	display : none;
+}
+.contentContainer .goodBadinfo img.selected {
+	display : inline;
 }
 .contentContainer .goodBadinfo > div {
 	margin-right : 10px;
@@ -125,6 +136,10 @@
 	border-radius: 8px;
 	margin-top : 10px;
 	margin-bottom : 10px;
+}
+.contentContainer .inputReply.update {
+	flex : 1;
+	background-color : white;
 }
 .contentContainer .inputReply .replContent {
 	margin : 10px 0px;
@@ -149,6 +164,14 @@
     padding : 8px 10px;
     cursor : pointer;
     border : none;
+}
+.contentContainer .inputReply .btnBox .btnCancel {
+	color: #ff6400;
+    background-color: #ffd347;
+}
+.contentContainer .inputReply .btnBox .btnUpdate {
+	color: #00770e;
+    background-color: #87e265;
 }
 .contentContainer .replyGroup .replyBox {
 	border-bottom : 1px solid #d1d1d1;
