--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -1,16 +1,16 @@
 .line {
-	border-top : 1px solid rgb(211, 211, 211);
+	border-top : 1px solid #99abc0;
 }
 .homeContainer {
 	padding : 15px 250px;
 	display : flex;
 }
 .leftSide {
-	flex : 4.5;
+	width : 76%;
 	margin-right : 28px;
 }
 .rightSide {
-	flex : 1.1;
+	flex : 1;
 }
 .wordCloudBox {
 	border: 1px solid black;
@@ -18,7 +18,7 @@
 	height : 300px;
 }
 .boardBox {
-	border: 1px solid #e1e1e1;
+	border: 3px solid #99abc0;
 	padding : 20px;
 	border-radius: 10px;
 	margin-top: 20px;
@@ -30,12 +30,36 @@
 	height : 300px 
 }
 .loginBox {
-	border: 1px solid #e1e1e1;
+	border: 3px solid #99abc0;
 	border-radius : 10px;
 	padding : 20px;
 	margin-bottom : 15px;
 }
-
+.comunityBox {
+	border: 3px solid #99abc0;
+	border-radius : 10px;
+	width : 100%;
+	height : 350px;
+	box-sizing: border-box;
+	display : flex;
+	flex-direction: column;
+}
+.memberBox {
+	border: 3px solid #99abc0;
+	border-radius : 10px;
+	padding : 12px 20px;
+	margin-bottom : 15px;
+}
+.adBox {
+	margin-bottom : 15px;
+    margin-top: 20px;
+	width : 100%;
+	height : 350px;
+	overflow: hidden;
+    border: 3px solid #99abc0;
+    border-radius: 10px;
+    background-color: #f5f2f2;
+}
 
 
 
@@ -135,12 +159,6 @@
 
 
 
-.memberBox {
-	border: 1px solid #e1e1e1;
-	border-radius : 10px;
-	padding : 12px 20px;
-	margin-bottom : 15px;
-}
 .memberBox > .row1 {
 	margin-bottom : 6px;
 	font-size : 15px;
@@ -255,16 +273,6 @@
 
 
 
-.adBox {
-	margin-bottom : 15px;
-    margin-top: 20px;
-	width : 100%;
-	height : 350px;
-	overflow: hidden;
-    border: 1px solid #e1dede;
-    border-radius: 10px;
-    background-color: #f5f2f2;
-}
 .adBox .title {
 	margin-bottom : 10px;
 }
@@ -289,15 +297,6 @@
 
 
 
-.comunityBox {
-	border: 1px solid #e1e1e1;
-	border-radius : 10px;
-	width : 100%;
-	height : 350px;
-	box-sizing: border-box;
-	display : flex;
-	flex-direction: column;
-}
 .comunityBox .title {
 	display : flex;
 	justify-content : space-between;
@@ -367,26 +366,103 @@
 
 
 .boardBox .hot {
-	flex : 1;
-	padding-right : 8px;
+	width : 50%;
+	margin-right : 12px;
+	overflow: hidden;
 }
 .boardBox .title {
 	margin-bottom : 6px;
+	height : 29px;
+}
+.boardBox .title {
+	display : flex;
+	justify-content: space-between;
+}
+.boardBox .title .icon {
+	margin-right : 5px;
+}
+.boardBox .title .icon img {
+	width : 27px;
+	vertical-align: bottom;
+}
+.boardBox .title .pag {
+	flex : 1;
+	text-align : right;
+	line-height: 28px;
+	margin-right : 10px;
+}
+.boardBox .title .page {
+	display : flex;
+	border : 1px solid #a7a7a7;
+    padding: 5px 7px;
+    border-radius: 5px;
+    user-select : none;
+}
+.boardBox .page .btn {
+	font-size : 15px;
+	font-weight: bolder;
+    color: #959595;
+    width : 20px;
+    text-align: center;
+    cursor : pointer;
+}
+.boardBox .page .line {
+	color : gray;
+	margin : 0px 5px;
+    line-height: 17px;
+    border-right : 1px solid #b9b9b9;
 }
 .boardBox .title .text {
 	font-size : 18px;
+	font-weight : bolder;
+	line-height: 28px;
+}
+.boardBox .hot .slideBox {
+	display : flex;
+	transition : transform 0.3s;
 }
 .boardBox .recent {
-	flex : 1;
-	padding-left : 8px;
+	width : 50%;
+	padding-left : 12px;
 }
 .boardBox .boardList {
-	display : flex;
+	flex-shrink : 0;
+	width : 100%;
 	margin-top : 6px;
 }
 .boardBox .boardList .board {
-	/* display : flex; */
+	display : flex;
+	padding: 5px 0px;
 }
 .boardBox .boardList .board .subject {
 	flex : 1;
+}
+.boardBox .hot .boardList .board .subject img {
+    width: 17px;
+    vertical-align: bottom;
+}
+.boardBox .recent .boardList .board .subject img {
+    width: 13px;
+    vertical-align: bottom;
+}
+.boardBox .boardList .board .subject .replyCnt {
+	color : #ff5b00;
+	font-size : 15px;
+	font-weight : bolder;
+}
+.boardBox .recent .title .part {
+	flex : 1;
+	display : flex;
+	justify-content: flex-end;
+}
+.boardBox .recent .title .part > div {
+	border : 1px solid #a8a8a8;
+	border-radius: 5px;
+	margin-left : 5px;
+	padding: 4px 6px;
+	cursor : pointer;
+}
+.boardBox .recent .title .part > div.selected {
+	color : white;
+	background-color : #7289ab;
 }
