--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -25,9 +25,10 @@
 	display : flex;
 }
 .newsBox {
-	border: 1px solid black;
+    border: 3px solid #99abc0;
+    border-radius: 10px;
 	padding : 20px;
-	height : 300px 
+	margin-bottom : 15px;
 }
 .loginBox {
 	border: 3px solid #99abc0;
@@ -488,4 +489,92 @@
 .boardBox .recent .title .part > div:hover {
 	color : white;
 	background-color : #7289ab;
+}
+
+
+
+
+
+
+.newsBox .keyword {
+	display : flex;
+}
+.newsBox .keyword .item {
+	border-top : 1px solid #b1b1b1;
+	border-left : 1px solid #b1b1b1;
+	border-bottom : 3px solid #b1b1b1;
+	padding: 6px 10px;
+	color : #5a5a5a;
+	background-color: #f3f3f3;
+	cursor : pointer;
+	height : 33px;
+	box-sizing: border-box;
+}
+.newsBox .keyword .item:hover {
+	font-weight : bolder;
+}
+.newsBox .keyword .item:last-of-type {
+	border-right : 1px solid #b1b1b1;
+}
+.newsBox .keyword .line {
+	flex : 1;
+	border-top : none;
+	border-bottom : 3px solid #b1b1b1;
+}
+.newsBox .newsList {
+	margin-top : 15px;
+}
+.newsBox .newsList .imgNewsBox {
+	display : flex;
+	justify-content: space-between;
+}
+.newsBox .newsList .imgNewsBox .imgNews {
+	width : 30%;
+	cursor : pointer;
+}
+.newsBox .newsList .imgNewsBox .imgNews img {
+	border-radius: 10px;
+    box-shadow: 0px 0px 11px 0px rgba(0,0,0,.12);
+    transition : 0.2s;
+}
+.newsBox .newsList .imgNewsBox .imgNews img:hover {
+	box-shadow: 0px 0px 20px 0px rgb(0 0 0 / .5);
+}
+.newsBox .newsList .imgNewsBox .imgNews .title {
+	font-weight : bolder;
+	font-size : 20px;
+}
+.newsBox .newsList .textNews {
+	display : flex;
+	margin-top : 20px;
+}
+.newsBox .newsList .textNews .left {
+	flex : 1;
+	margin-right : 10px;
+}
+.newsBox .newsList .textNews .right {
+	flex : 1;
+	margin-left : 10px;
+}
+.newsBox .newsList .textNews .article {
+	display : flex;
+	justify-content: space-between;
+	font-size : 17px;
+	padding: 5px 0px;
+	height : 30px;
+	box-sizing: border-box;
+}
+.newsBox .newsList .textNews .article .text1 {
+	overflow: hidden;
+	flex : 10;
+}
+.newsBox .newsList .textNews .article .text1:hover {
+	cursor : pointer;
+	text-decoration: underline;
+}
+.newsBox .newsList .textNews .article .text2 {
+	font-size : 14px;
+	color :gray;
+	flex : 1.2;
+	text-align : right;
 }
