--- a/src/main/webapp/resources/css/news/news.css
+++ b/src/main/webapp/resources/css/news/news.css
@@ -4,9 +4,16 @@
     position: relative;
     min-height : 560px;
 }
+.newsContainer .newsLoaderLayer {
+	display : none;
+}
+.newsContainer .mainLoading {
+	position : absolute;
+    left: 44%;
+    top: 30%;
+}
 .newsContainer .keywordContainer {
-	width : 93%;
-	margin : 35px auto;
+	margin : 35px 0px;
 }
 .keywordContainer .title {
 	font-size : 22px;
@@ -28,8 +35,103 @@
 	box-sizing : border-box;
 	color : white;
 	margin : 0px 10px 10px 0px;
+	cursor : pointer;
+}
+.newsList {
+	display : flex;
+	flex-wrap: wrap;
+	box-shadow : 0px 0px 23px 0px rgba(0,0,0,.16);
+	padding : 20px 0px 0px 0px;
+	border-radius: 8px;
+}
+.article {
+	width : 46%;
+	display : flex;
+    margin-bottom: 17px;
+}
+.article:nth-of-type(2n-1) {
+	margin-right : 2%;
+	margin-left : 2%;
+}
+.article:nth-of-type(2n) {
+	margin-left : 2%;
+	margin-right : 2%;
+}
+.article .img img {
+	border-radius: 6px;
+	border : 1px solid lightgray;
+	width : 65px;
+	height : 65px;
+	cursor : pointer;
+}
+.article .title {
+	flex : 1;
+	display : flex;
+	flex-direction : column;
+	justify-content : space-between;
+	border-bottom : 1px solid lightgray;
+	padding : 3px 0px;
+	margin-left : 10px;
+}
+.article .title .text1:hover {
+	text-decoration: underline;
+	cursor : pointer;
+}
+.article .title .text2 {
+	font-size : 14px;
+	color : gray;
+}
+.newsList .articleContent {
+	display : none;
+}
+.newsList .newsMore {
+	flex : 1;
+	text-align: center;
+	border-top : 1px solid lightgray;
+	padding : 12px 0px;
+	margin-top : 5px;
+	color : gray;
+	display : none;
+}
+.newsList .newsMore img {
+	width : 17px;
+	vertical-align: bottom;
+}
+.newsList .newsMore .set {
+	display : inline-block;
+	cursor : pointer;
+	user-select : none;
 }
 
-.article {
-	display : flex;
+
+
+.newsModalContainer {
+    position: fixed;
+    z-index: 10;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,.4);
+    display : none;
+}
+.newsModalContainer .newsContent {
+	position : relative;
+	margin : 70px auto;
+	background-color : white;
+	width : 700px;
+	height : 800px;
+	border-radius: 12px;
+	animation : slideIn 0.3s;
+	box-sizing: border-box;
+    padding: 40px 0px 2px 30px;
+}
+.newsModalContainer .newsContent #newsModalContent {
+	height : 100%;
+	overflow-y : scroll;
+	padding-right: 20px;
+}
+@keyframes slideIn {
+	from {top : -50%}
+	to {top : 0%}
 }
