--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -17,7 +17,8 @@
 	top : 0px;
 }
 .wordCloudBox {
-	border: 1px solid black;
+	border: 3px solid #99abc0;
+	border-radius: 10px;
 	padding : 20px;
 }
 .boardBox {
@@ -513,6 +514,10 @@
 	height : 33px;
 	box-sizing: border-box;
 }
+.newsBox .keyword .item.selected {
+	font-weight : bolder;
+	color : black;
+}
 .newsBox .keyword .item:hover {
 	font-weight : bolder;
 }
@@ -557,6 +562,13 @@
 .newsBox .newsList .imgNewsBox .imgNews .title {
 	font-weight : bolder;
 	font-size : 20px;
+}
+.newsBox .newsList .imgNewsBox .imgNews .noResult {
+    position: absolute;
+    top: 67%;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
 }
 .newsBox .newsList .textNews {
 	display : flex;
