--- a/src/main/webapp/resources/css/discussion/discussion.css
+++ b/src/main/webapp/resources/css/discussion/discussion.css
@@ -1,3 +1,106 @@
 .discussionContainer {
 	min-height: 625px;
+	width : 60%;
+	margin : auto;
+}
+.discussionContainer .btnBox {
+	display : flex;
+	justify-content: center;
+	margin-top : 30px;
+    margin-bottom: 25px;
+}
+.btnBox .btn {
+	color : white;
+    background: linear-gradient(to right,#4f85ff,#b067ff);
+    border-radius: 55px;
+    padding: 18px 28px;
+    font-size : 35px;
+    cursor : pointer;
+    user-select : none;
+    animation: none;
+}
+.btnBox .btn img {
+	width: 38px;
+    vertical-align: bottom;
+}
+.btnBox .btn:hover {
+    box-shadow : 0px 0px 16px 0px rgba(0,0,0,.16);
+}
+.calendarBtn {
+	position : relative;
+	width : 50px;
+	height : 50px;
+	margin-left : auto;
+	border-radius: 25px;
+	user-select : none;
+}
+.calendarBtn:hover {
+	background-color: #f0f0f0;
+	cursor : pointer;
+}
+.calendarBtn img {
+	position : absolute;
+	width: 35px;
+    height: 35px;
+    left: 8px;
+    top: 8px;
+}
+
+
+.discussionList {
+	border-top : 1px solid #efefef;
+	padding-top : 26px;
+}
+.discussionList .discussion {
+	display : flex;
+	margin-bottom : 22px;
+}
+.discussion .img {
+	width : 150px;
+	height : 150px;
+	border-radius: 10px;
+	box-shadow : 0px 0px 5px 0px rgba(0,0,0,.16);
+}
+.discussion .img img {
+	width : 100%;
+	border-radius: 10px;
+}
+.discussion .info {
+	flex : 1;
+	display : flex;
+	position : relative;
+	flex-direction: column;
+	margin-left : 30px;
+	border-bottom : 1px solid #adcbde;
+}
+.discussion .info .subject {
+	font-size : 24px;
+	font-weight: bolder;
+	margin-bottom: 9px;
+}
+.discussion .info .line1 {
+	border-bottom : 2px solid #32a5eb;
+}
+.discussion .info .line2 {
+	flex : 1;
+}
+.discussion .info .row {
+	display : flex;
+	padding : 4px 0px;
+}
+.discussion .info .row .col1 {
+	width : 150px;
+}
+.discussion .info .row .col2 {
+	color : gray;
+}
+.discussion .info .btn {
+	position : absolute;
+	right : 0px;
+	bottom : 4px;
+	color: white;
+    background-color: deepskyblue;
+    padding: 10px 20px;
+    cursor : pointer;
+    user-select : none;
 }
