--- a/src/main/webapp/resources/css/home/home.css
+++ b/src/main/webapp/resources/css/home/home.css
@@ -436,6 +436,7 @@
 	font-size : 18px;
 	font-weight : bolder;
 	line-height: 28px;
+	cursor : pointer;
 }
 .boardBox .hot .slideBox {
 	display : flex;
