--- a/src/main/webapp/resources/css/discussion/discussion.css
+++ b/src/main/webapp/resources/css/discussion/discussion.css
@@ -3,7 +3,7 @@
 	width : 60%;
 	margin : auto;
 }
-.discussionContainer .btnBox {
+.discussionContainer > .btnBox {
 	display : flex;
 	justify-content: center;
 	margin-top : 30px;
@@ -103,4 +103,87 @@
     padding: 10px 20px;
     cursor : pointer;
     user-select : none;
+}
+
+
+
+
+
+
+.discussionModalContainer {
+	position : fixed;
+	top : 0px;
+	left : 0px;
+	width : 100%;
+	height : 100%;
+	background-color: rgba(0,0,0,.1);
+	display : none;
+}
+.discussionModalContainer .modalContent {
+	position : relative;
+	width : 580px;
+	margin : 60px auto;
+	background-color : white;
+	border-radius: 10px;
+	animation : slideIn 0.3s;
+	padding: 20px;
+	box-sizing: border-box;
+}
+@keyframes slideIn {
+	from {top : -100%}
+	to {top : 0%}
+}
+.modalContent .title {
+	font-size : 30px;
+	font-weight: 700;
+	color: #6685dc;
+	border-bottom: 5px solid #93b7ff;
+	padding-bottom : 5px;
+	margin-bottom: 17px;
+}
+.modalContent .row {
+	display : flex;
+    margin: 29px 0px;
+}
+.modalContent .row .col1 {
+	width : 100px;
+	font-size: 20px;
+    font-weight: 700;
+    color: #595959;
+}
+.modalContent .row .col2 {
+	flex : 1;
+}
+.modalContent .row .col2 input[type=text]{
+	border : none;
+	border-bottom : 1px solid #e9e9e9;
+	width : 100%;
+	font-size : 16px;
+	outline : none;
+	margin-top: 2px;
+}
+.modalContent .row.preview img {
+	width: 150px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,.16);
+}
+.modalContent .btnBox {
+	display : flex;
+	justify-content : center;
+	margin-top : 34px;
+}
+.modalContent .btnBox .btn1 {
+	color : white;
+	background-color: #00c5ff;
+	margin-right : 5px;
+	padding: 11px 23px;
+    border-radius: 30px;
+    cursor : pointer;
+}
+.modalContent .btnBox .btn2 {
+	color : white;
+	background-color: #ffc000;
+	margin-left : 5px;
+	padding: 11px 23px;
+    border-radius: 30px;
+    cursor : pointer;
 }
