--- a/src/main/webapp/resources/css/home/header.css
+++ b/src/main/webapp/resources/css/home/header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap');
 body {
 	margin : 0px;
 	padding : 0px;
