--- a/src/main/webapp/resources/css/discussion/discussion.css
+++ b/src/main/webapp/resources/css/discussion/discussion.css
@@ -63,6 +63,7 @@
 }
 .discussion .img img {
 	width : 100%;
+	height : 100%;
 	border-radius: 10px;
 }
 .discussion .info {
@@ -99,10 +100,64 @@
 	right : 0px;
 	bottom : 4px;
 	color: white;
-    background-color: deepskyblue;
     padding: 10px 20px;
     cursor : pointer;
     user-select : none;
+}
+.discussion .info .btn1 {
+	background-color: deepskyblue;
+	overflow: hidden;
+	width : 101px;
+	height : 37.7px;
+	box-sizing: border-box;
+}
+.discussion .info .btn3 {
+	background-color: #3db55f;
+	overflow: hidden;
+	width : 84px;
+	height : 37.7px;
+	box-sizing: border-box;
+}
+.discussion .info .btn3:hover .group {
+	transform : translateX(-70px);
+}
+.discussion .info .btn3 .group {
+	transition : transform 0.3s;
+	width : 120px;
+}
+.discussion .info .btn4 {
+	background-color: #828282;
+	width : 71px;
+	height : 37.7px;
+	box-sizing: border-box;
+	overflow: hidden;
+}
+.discussion .info .btn4:hover .group {
+	transform : translateX(-56px);
+}
+.discussion .info .btn4 .group {
+	transition : transform 0.3s;
+	width : 100px;
+}
+.discussion .info .btn5 {
+	background-color : #8b4ce0;
+	width : 71px;
+	height : 37.7px;
+	box-sizing: border-box;
+}
+.discussion .info .btn2 {
+	background-color: deepskyblue;
+	overflow: hidden;
+	width : 85px;
+	height : 37.7px;
+	box-sizing: border-box;
+}
+.discussion .info .btn2:hover .group {
+	transform : translateX(-84px);
+}
+.discussion .info .btn2 .group {
+	transition : transform 0.3s;
+	width : 139px;
 }
 
 
@@ -164,6 +219,8 @@
 }
 .modalContent .row.preview img {
 	width: 150px;
+	height : 150px;
+	border-radius : 6px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,.16);
 }
 .modalContent .btnBox {
@@ -186,4 +243,7 @@
 	padding: 11px 23px;
     border-radius: 30px;
     cursor : pointer;
+}
+.modalContent .link {
+	display : none;
 }
