--- a/src/main/webapp/resources/css/discussion/discussionChat.css
+++ b/src/main/webapp/resources/css/discussion/discussionChat.css
@@ -1,5 +1,115 @@
 .discussionChatContainer {
 	min-height: 625px;
-	width : 60%;
+	width : 50%;
 	margin : auto;
+}
+.discussionChatContainer .rowGroup {
+	display : flex;
+	margin-top : 25px;
+}
+.discussionChatContainer .outIcon {
+    margin-left: auto;
+    margin-top : 10px;
+    position : relative;
+    width: 65px;
+    height : 65px;
+    border-radius: 50px;
+    transition : 0.3s;
+}
+.discussionChatContainer .outIcon:hover {
+	background-color : #e0dfdf;
+	cursor : pointer;
+}
+.discussionChatContainer .outIcon img {
+	width : 44px;
+	position : absolute;
+	left: 13px;
+    top: 10px;
+}
+.rowGroup .chatBox {
+	display : flex;
+	flex-direction : column;
+	flex : 2;
+	height : 550px;
+	border : 1px solid #b9b7b7;
+	margin-right : 15px;
+	border-radius: 10px;
+	box-sizing: border-box;
+}
+.rowGroup .chatBox .subject {
+	background: linear-gradient(to right,#acc0ed,#9f84ff);
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	padding: 5px 6px;
+	font-weight: 700;
+	color : #454545;
+}
+.rowGroup .chatBox .chatArea {
+	flex : 1;
+	margin : 13px 13px 10px 13px;
+}
+.rowGroup .chatBox .typing {
+	border : 1px solid #989898;
+	border-radius: 7px;
+	padding : 7px;
+	margin : 0px 13px 13px 13px;
+}
+.rowGroup .chatBox .typing textarea {
+	width : 100%;
+	box-sizing: border-box;
+	resize: none;
+	outline : none;
+	font-size : 18px;
+	border : none;
+	color : #393939;
+}
+.rowGroup .chatBox .typing textarea::-webkit-scrollbar{
+  display:none;
+}
+.rowGroup .chatBox .typing .submit {
+	display : flex;
+	justify-content: flex-end;
+}
+.rowGroup .chatBox .typing .submit .length {
+	color : gray;
+	font-size : 12px;
+	margin-right : 10px;
+	height: 25px;
+    line-height: 33px;
+}
+.rowGroup .chatBox .typing .submit .btn {
+	text-align : center;
+	background-color : #a1a1a1;
+	color : white;
+	font-size : 15px;
+	padding: 5px 14px;
+	border-radius: 5px;
+	transition : 0.2s;
+	user-select : none;
+}
+.rowGroup .chatBox .typing .submit .btn.clickBtn {
+	background-color : #007eff;
+	cursor : pointer;
+}
+.rowGroup .memberBox {
+	flex : 1;
+	border : 1px solid #b9b7b7;
+	margin-left : 15px;
+	border-radius: 10px;
+}
+.rowGroup .memberBox .participant .title {
+	text-align: center;
+	background: linear-gradient(to right,#acc0ed,#9f84ff);
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	color : #525252;
+    padding: 2px 0px;
+}
+.rowGroup .memberBox .spectator .title {
+	text-align: center;
+	background: linear-gradient(to right,#acc0ed,#9f84ff);
+	color : #525252;
+	border-bottom: 1px solid #d1d1d1;
+	border-top: 1px solid #d1d1d1;
+    padding: 2px 0px;
 }
